# SpectralLibrarian_Repo

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt
data/: clean_filtered_spx.pkl  cleaned_spx.pkl  msms-hexose-phosphates.msp
docs/source/: conf.py  index.rst  modules.rst
old_venv_setup_wrong_py_version/: pyvenv.cfg  requirements.md  setup.py  setup_env.sh  setup_env.txt
src/MSAnalyzer/: AdductTools.py  IsotopeTools.py  LibraryManager.py  MetaTools.py  SimilarityTools.py  SpectralTools.py  StructureTools.py  __init__.py  dataframe_utils.py
src/SpectralLibrarian/: AdductTools.py  DBTools.py  DataFrameTools.py  InstrumentalTools.py  IsotopeTools.py  LibraryConstructor.py  LibraryManager.py  MetaTools.py  PrecursorTools.py  PredictionTools.py  PredictionTools_future.py  RawDataTools.py  SimilarityTools.py  SpectralTools.py  StructureTools.py  __init__.py  dataframe_utils.py  utilities.py
src/speclib/: LibraryManager.py  MetaTools.py  SimilarityTools.py  __init__.py  dataframe_utils.py
updated_requirements/: pyproject_updated_reqs.toml  requirements_updated.txt
