# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpectralLibrarian"
dynamic = ["version"]
description = "State-of-the-art mass spectrometry & chemoinformatics toolkit with hierarchical structural analysis and fingerprint ensembles"
readme = "README.md"
authors = [
    {name = "Triston Groff", email = "triston.lee.groff@gmail.com"},
    {name = "Yunwon Kang", email = "k.yunwon@wustl.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mass-spectrometry", "chemoinformatics", "rdkit", "spectral-similarity", "structural-analysis", "msms-library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "joblib>=1.5.0",
    "matchms==0.31.0",               # pinned to known compatible version
    "ms_entropy>=1.3.9",
    "numpy>=2.0.0,<2.3",             # this is the key compromise
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pubchempy>=1.0.5",
    "pyteomics>=4.7.5",
    "rdkit>=2024.09.1",
    "scikit-learn>=1.5",
    "scipy>=1.15.3",
    "SpectralEntropy @ git+https://github.com/triston-groff/SpectralEntropy.git",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.9", "seaborn>=0.13"]
jupyter = ["jupyterlab>=4.4", "ipywidgets>=8.1", "notebook>=7.4"]
dev = [
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",# Sphinx documentation
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",      # clean, professional theme
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-copybutton>=0.5.0",     # nice "copy" buttons on code blocks
]


[project.urls]
Homepage = "https://github.com/triston-groff/SpectralLibrarian_Repo"
Repository = "https://github.com/triston-groff/SpectralLibrarian_Repo"
Issues = "https://github.com/triston-groff/SpectralLibrarian_Repo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "SpectralLibrarian.version.__version__"}

[tool.setuptools.package-data]
"SpectralLibrarian" = ["*.csv", "*.msp", "tests/data/*"]