# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel", "Cython<3", "numpy>=2.0.0,<2.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SpectralLibrarian"
dynamic = ["version"]
description = "State-of-the-art mass spectrometry & chemoinformatics toolkit"
readme = "README.md"
authors = [
    {name = "Triston Groff", email = "triston.lee.groff@gmail.com"},
    {name = "Yunwon Kang", email = "k.yunwon@wustl.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mass-spectrometry", "chemoinformatics", "rdkit", "spectral-similarity", "structural-analysis", "msms-library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    # Core numerical/data stack used directly by the package
    "numpy>=2.2.6,<2.3",
    "pandas>=2.3.3",
    "scipy>=1.15.3",

    # Mass spectrometry / spectral processing
    "matchms>=0.33.0",
    "ms_entropy>=1.5.0",
    "pyteomics>=5.0",
    "psims>=1.3.6",

    # Chemoinformatics / chemical identifiers
    "rdkit>=2026.3.2",
    "molmass>=2025.4.14",
    "pubchempy>=1.0.5",

    # File I/O and structured data parsing
    "openpyxl>=3.1.5",
    "xmltodict>=1.0.4",

    # Plotting used by analysis/visualization functions
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",

    # CTS / websocket client wrapper
    "python-socketio[client]>=5.16.2",

    # Utilities used directly in package code
    "joblib>=1.5.3",
    "tqdm>=4.67.3",
]


[project.optional-dependencies]
jupyter = ["jupyterlab>=4.4", "ipywidgets>=8.1", "notebook>=7.4"]
dev = [
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",# Sphinx documentation
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",      # clean, professional theme
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-copybutton>=0.5.0",     # nice "copy" buttons on code blocks
]


[project.urls]
Homepage = "https://github.com/triston-groff/SpectralLibrarian_Repo"
Repository = "https://github.com/triston-groff/SpectralLibrarian_Repo"
Issues = "https://github.com/triston-groff/SpectralLibrarian_Repo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "SpectralLibrarian.version.__version__"}

[tool.setuptools.package-data]
"SpectralLibrarian" = ["*.csv", "*.msp", "tests/data/*"]
